--- a/Mustachio/Blog.html
+++ b/Mustachio/Blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="head"><img src="images/logo.jpg" alt="Logo"></div>
-<div class="nav"> <a href="Mustach.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
+<div class="nav"> <a href="index.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
     <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1"></div>
         <div class="flexbox-item flexbox-item-2"></div>
