--- a/Mustachio/Contact.html
+++ b/Mustachio/Contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="head"><img src="images/logo.jpg" alt="Logo"></div>
-<div class="nav"> <a href="Mustach.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
+<div class="nav"> <a href="index.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
 <div class="b1"></div>
 <div class="b2"></div>
 <div class="b3"></div>
