Fixed index again

--- a/Mustachio/index.html
+++ b/Mustachio/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="head"><img src="images/logo.jpg" alt="Logo"></div>
-<div class="nav"> <a href="Mustach.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
+<div class="nav"> <a href="index.html">Home</a> <a href="about.html">About</a> <a href="gallery.html">gallery</a> <a href="Blog.html">blog</a> <a href="Contact.html">contact</a> </div>
 <div class="beacon">
     <div class="beacon-text">
         <p>lorem ipsum</p>
@@ -32,5 +32,6 @@
 <div class="b4"></div>
 <div class="b5"></div>
 <div class="Footer">All Rights Reserved <img style="float:right;" src="images/icons.jpg"></div>
+<!--cyctycutctuctuv-->
 </body>
 </html>
